fixed: github and demo button shadow overlapping

--- a/src/Components/Project Card/index.scss
+++ b/src/Components/Project Card/index.scss
@@ -28,11 +28,8 @@
     cursor: pointer;
 
     box-shadow:
-      rgba(0, 0, 0, 0.25) 0px 54px 55px,
-      rgba(0, 0, 0, 0.12) 0px -12px 30px,
-      rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.17) 0px 12px 13px,
-      rgba(0, 0, 0, 0.09) 0px -3px 5px;
+      rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
     transition: filter 0.2s ease-in-out;
 
